force-app/main/default/objects/Participant_Enrollment__c/fields/Non_Enrollment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Enrollment_Reason__c</fullName>
    <label>Non-Enrollment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Participant_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site No Longer Accepting Referrals</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Meet Pre-Screening Eligibility</fullName>
            </value>
            <value>
                <fullName>Declined Practitioner</fullName>
            </value>
            <value>
                <fullName>PI Decision</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Show For Initial Visit</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Sign Consent</fullName>
            </value>
            <value>
                <fullName>Failed Inclusion/Exclusion Criteria</fullName>
            </value>
            <value>
                <fullName>Patient Declined</fullName>
            </value>
            <value>
                <fullName>Visit Out Of Window</fullName>
            </value>
            <value>
                <fullName>Patient Decision</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Transportation Issues</fullName>
            </value>
            <value>
                <fullName>Childcare Issues</fullName>
            </value>
            <value>
                <fullName>Participant Not Interested</fullName>
            </value>
            <value>
                <fullName>Did Not Meet Inclusion/Exclusion Criteria</fullName>
            </value>
            <value>
                <fullName>Did Not Attend Appointment</fullName>
            </value>
            <value>
                <fullName>Left a Message</fullName>
            </value>
            <value>
                <fullName>Protocol Concerns</fullName>
            </value>
            <value>
                <fullName>Inadequate Documentation</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Eligibility Criteria</fullName>
            </value>
            <value>
                <fullName>Could not schedule visit</fullName>
                <isActive>false</isActive>
                <label>Could not schedule visit</label>
            </value>
            <value>
                <fullName>Declined or Withdrew Consent</fullName>
                <isActive>false</isActive>
                <label>Declined or Withdrew Consent</label>
            </value>
            <value>
                <fullName>Did not respond to contact attempts</fullName>
                <isActive>false</isActive>
                <label>Did not respond to contact attempts</label>
            </value>
            <value>
                <fullName>Failed screening / does not qualify</fullName>
                <isActive>false</isActive>
                <label>Failed screening / does not qualify</label>
            </value>
            <value>
                <fullName>No longer interested</fullName>
                <isActive>false</isActive>
                <label>No longer interested</label>
            </value>
            <value>
                <fullName>No show for scheduled visit</fullName>
                <isActive>false</isActive>
                <label>No show for scheduled visit</label>
            </value>
            <value>
                <fullName>Not eligible</fullName>
                <isActive>false</isActive>
                <label>Not eligible</label>
            </value>
            <value>
                <fullName>Not willing to sign informed consent</fullName>
                <isActive>false</isActive>
                <label>Not willing to sign informed consent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>