force-app/main/default/objects/Participant_Enrollment__c/fields/Non_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Non_Referral_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date non-referral reason identified</inlineHelpText>
    <label>Non-Referral Date</label>
    <type>Date</type>
</CustomField>