force-app/main/default/objects/Participant_Enrollment__c/fields/Non_Referral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Non_Referral_Notes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Free form field to add in any additional comments concerning non-referral</inlineHelpText>
    <label>Non-Referral Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>