force-app/main/default/objects/Participant_Enrollment__c/fields/Non_Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Referral_Reason__c</fullName>
    <label>Non- Referral Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Had Discussion, Not Interested</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Failed Pre-Eligibility Screening</fullName>
            </value>
            <value>
                <fullName>Did not pass chart review</fullName>
                <isActive>false</isActive>
                <label>Did not pass chart review</label>
            </value>
            <value>
                <fullName>Did not pass pre-eligibility</fullName>
                <isActive>false</isActive>
                <label>Did not pass pre-eligibility</label>
            </value>
            <value>
                <fullName>No suitable site</fullName>
                <isActive>false</isActive>
                <label>No suitable site</label>
            </value>
            <value>
                <fullName>Not interested</fullName>
                <isActive>false</isActive>
                <label>Not interested</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Stopped at agreement for T&amp;C / Refer</fullName>
                <isActive>false</isActive>
                <label>Stopped at agreement for T&amp;C / Refer</label>
            </value>
            <value>
                <fullName>Unable to consult</fullName>
                <isActive>false</isActive>
                <label>Unable to consult</label>
            </value>
            <value>
                <fullName>Unable to contact</fullName>
                <isActive>false</isActive>
                <label>Unable to contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>