force-app/main/default/objects/Participant_Enrollment__c/fields/Opt_In_Referred__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Referred__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the Potential Participant opt-in to allow being referred to the Principal Investigator associated with the Site selected earlier?</inlineHelpText>
    <label>Opt-In Referred</label>

    <type>Checkbox</type>
</CustomField>