force-app/main/default/objects/Participant_Enrollment__c/fields/Opt_In_Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Referred_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Potential Participant opted into being referred</inlineHelpText>
    <label>Opt-In Referred Date</label>

    <type>Date</type>
</CustomField>