force-app/main/default/objects/Participant_Enrollment__c/fields/Opt_In_T_C__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_T_C__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the Potential Participant opt-in to the Terms and Conditions of clinical trial?</inlineHelpText>
    <label>Opt-In T&amp;C</label>
    <type>Checkbox</type>
</CustomField>