force-app/main/default/objects/Participant_Enrollment__c/fields/Opt_In_T_C_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_T_C_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Potential Participant opted into the T&amp;Cs</inlineHelpText>
    <label>Opt-In T&amp;C Date</label>

    <type>Date</type>
</CustomField>