force-app/main/default/objects/Participant_Enrollment__c/fields/Outreach_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Email_Status__c</fullName>
    <label>Outreach Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>