force-app/main/default/objects/Participant_Enrollment__c/fields/Outreach_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Mail_Sent__c</fullName>
    <label>Outreach Mail Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>