force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Participant_Acknowledgement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Acknowledgement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>