force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Alt_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Alt_Phone_Type__c</fullName>
    <label>Participant Alt. Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>12345</fullName>
                <isActive>false</isActive>
                <label>12345</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>