force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Participant_Alternative_Phone__c</fullName>
        <label>Participant Alternative Phone</label>
        <type>Phone</type>
</CustomField>