force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Participant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Enrollments (Participant Contact)</relationshipLabel>
    <relationshipName>PE_Participant_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>