force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Enrollment_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment_ID__c</fullName>
    <displayFormat>ParticipantE-{000000}</displayFormat>
    <label>Participant Enrollment ID</label>

    <type>AutoNumber</type>
</CustomField>