force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_ID_randomized_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_ID_randomized_ID__c</fullName>
    <description>HCP/Physician Participant ID randomized ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>HCP/Physician Participant ID randomized ID</inlineHelpText>
    <label>Participant ID (randomized ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>