force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Identified_Date__c.field-meta.xml
<CustomField>
    <fullName>Participant_Identified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when HCP/3rd Party identifies Potential Participant</inlineHelpText>
    <label>Participant Identified Date</label>

    <type>Date</type>
</CustomField>