force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Key__c.field-meta.xml
<CustomField>
    <fullName>Participant_Key__c</fullName>
    <description>Participant Key = Participant number + NCT number</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Participant Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>