force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Participant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>