force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Opt_In_SMS__c.field-meta.xml
<CustomField>
    <fullName>Participant_Opt_In_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant Opt In SMS</label>
    <type>Checkbox</type>
</CustomField>