force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Opt_In_Status_SMS__c.field-meta.xml
<CustomField>
    <fullName>Participant_Opt_In_Status_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value on this field is place holder for IQVIA outreach consent for email which will later be copied on to contact fields</description>
    <label>Opt In SMS/text</label>
    <type>Checkbox</type>
</CustomField>