force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Phone_Opt_In_Permit_Phone__c.field-meta.xml
<CustomField>
    <fullName>Participant_Phone_Opt_In_Permit_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value on this field is place holder for IQVIA outreach consent for email which will later be copied on to contact fields</description>
    <label>Opt In Phone</label>
    <type>Checkbox</type>
</CustomField>