force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>Participant_Status__c</fullName>
    <description>HCP/Physician Participant Participant Status</description>
    <inlineHelpText>HCP/Physician Participant Participant Status</inlineHelpText>
    <label>Participant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failed Referral</fullName>
            </value>
            <value>
                <fullName>Failed Review</fullName>
            </value>
            <value>
                <fullName>Excluded from Referring</fullName>
            </value>
            <value>
                <fullName>Eligibility Passed</fullName>
            </value>
            <value>
                <fullName>Eligibility Failed</fullName>
            </value>
            <value>
                <fullName>Screening In Progress</fullName>
            </value>
            <value>
                <fullName>Screening Failed</fullName>
            </value>
            <value>
                <fullName>Enrollment Success</fullName>
            </value>
            <value>
                <fullName>Enrollment Failed</fullName>
            </value>
            <value>
                <fullName>Treatment Period Started</fullName>
            </value>
            <value>
                <fullName>Follow-Up Period Started</fullName>
            </value>
            <value>
                <fullName>Participation Complete</fullName>
            </value>
            <value>
                <fullName>Trial Complete</fullName>
            </value>
            <value>
                <fullName>Drop Out</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Successfully Contacted</fullName>
            </value>
            <value>
                <fullName>Contact Attempted</fullName>
            </value>
            <value>
                <fullName>Unable to Reach</fullName>
            </value>
            <value>
                <fullName>Contacted - Not Suitable</fullName>
            </value>
            <value>
                <fullName>Screening Passed</fullName>
            </value>
            <value>
                <fullName>Unable to Screen</fullName>
            </value>
            <value>
                <fullName>Randomization Success</fullName>
            </value>
            <value>
                <fullName>Randomization Failed</fullName>
            </value>
            <value>
                <fullName>Screening In Progress - Wash Out Period</fullName>
                <label>In Wash Out Period</label>
            </value>
            <value>
                <fullName>Ready to Screen</fullName>
            </value>
            <value>
                <fullName>Withdrew Consent</fullName>
            </value>
            <value>
                <fullName>Declined Consent</fullName>
            </value>
            <value>
                <fullName>Withdrew Consent After Screening</fullName>
            </value>
            <value>
                <fullName>Declined Final Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>