force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Status_Last_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Participant_Status_Last_Changed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Status Last Changed Date</label>

    <type>DateTime</type>
</CustomField>