force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Study_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Study_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Study Enrollment</label>
    <referenceTo>Participant_Study_Enrollment__c</referenceTo>
    <relationshipLabel>Participant Enrollments</relationshipLabel>
    <relationshipName>Participant_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>