force-app/main/default/objects/Participant_Enrollment__c/fields/Participant_Surname__c.field-meta.xml
<CustomField>
    <fullName>Participant_Surname__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Participant Surname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>