force-app/main/default/objects/Participant_Enrollment__c/fields/Participantavailableincompleteconsen__c.field-meta.xml
<CustomField>
    <fullName>Participantavailableincompleteconsen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be true if participant already available in complete consent.</inlineHelpText>
    <label>Participant available in complete consen</label>
    <type>Checkbox</type>
</CustomField>