force-app/main/default/objects/Participant_Enrollment__c/fields/ParticipantGUID__c.field-meta.xml
<CustomField>
    <fullName>ParticipantGUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>