force-app/main/default/objects/Participant_Enrollment__c/fields/ParticipantNoShow__c.field-meta.xml
<CustomField>
    <fullName>ParticipantNoShow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ParticipantNoShow</label>
    <type>Checkbox</type>
</CustomField>