force-app/main/default/objects/Participant_Enrollment__c/fields/ParticipantPhone__c.field-meta.xml
<CustomField>
    <fullName>ParticipantPhone__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Participant__r.Phone__c, &quot;-&quot;, &quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;  &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParticipantPhone</label>
    <type>Text</type>
</CustomField>