force-app/main/default/objects/Participant_Enrollment__c/fields/Pass_Chart_Review__c.field-meta.xml
<CustomField>
    <fullName>Pass_Chart_Review__c</fullName>
    <inlineHelpText>Chart review trying to identify Potential Participant.  Documented per potential participant?</inlineHelpText>
    <label>Pass Chart Review</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>