force-app/main/default/objects/Participant_Enrollment__c/fields/Patient_Auth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Auth__c</fullName>
    <label>Patient Auth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>