force-app/main/default/objects/Participant_Enrollment__c/fields/Patient_Middle_Name_Initial__c.field-meta.xml
<CustomField>
    <fullName>Patient_Middle_Name_Initial__c</fullName>
    <label>Patient Middle Name Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>