force-app/main/default/objects/Participant_Enrollment__c/fields/Patient_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_Phone_Type__c</fullName>
    <label>Patient  Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>