force-app/main/default/objects/Participant_Enrollment__c/fields/PerCounter__c.field-meta.xml
<CustomField>
    <fullName>PerCounter__c</fullName>
    <formula>VALUE(IF(CONTAINS(Name, &apos;REFERRALID&apos;), MID(Name, 11,  LEN(Name) ), MID(Name, 4,  LEN(Name) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PerCounter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>