force-app/main/default/objects/Participant_Enrollment__c/fields/Permit_IQVIA_to_contact_about_study__c.field-meta.xml
<CustomField>
    <fullName>Permit_IQVIA_to_contact_about_study__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when share the above information with IQVIA and its affiliates checkbox is checked in the front end</inlineHelpText>
    <label>Permit personal information storage</label>
    <type>Checkbox</type>
</CustomField>