force-app/main/default/objects/Participant_Enrollment__c/fields/Permit_Mail_Email_contact_for_this_study__c.field-meta.xml
<CustomField>
    <fullName>Permit_Mail_Email_contact_for_this_study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit Mail-Email contact for this study</label>
    <type>Checkbox</type>
</CustomField>