force-app/main/default/objects/Participant_Enrollment__c/fields/Permit_SMS_Text_for_this_study__c.field-meta.xml
<CustomField>
    <fullName>Permit_SMS_Text_for_this_study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit SMS/Text for this study</label>
    <type>Checkbox</type>
</CustomField>