force-app/main/default/objects/Participant_Enrollment__c/fields/PI_Contact__c.field-meta.xml
<CustomField>
    <fullName>PI_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PI Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Enrollments (PI)</relationshipLabel>
    <relationshipName>Participant_Profile2</relationshipName>
    <type>Lookup</type>
</CustomField>