force-app/main/default/objects/Participant_Enrollment__c/fields/PPMID__c.field-meta.xml
<CustomField>
    <fullName>PPMID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PPM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>