force-app/main/default/objects/Participant_Enrollment__c/fields/Pre_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Pre_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the Potential Participant pass the pre-eligibility screening questionnaire?</inlineHelpText>
    <label>Pre-Eligibility</label>
    <type>Checkbox</type>
</CustomField>