force-app/main/default/objects/Participant_Enrollment__c/fields/Pre_Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Eligibility_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the pre-eligibility screening questionnaire was completed</inlineHelpText>
    <label>Pre-Eligibility Date</label>

    <type>Date</type>
</CustomField>