force-app/main/default/objects/Participant_Enrollment__c/fields/Pre_Screener_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screener_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Screener Completed by</label>
    <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Enrollments (Pre Screener Completed by)</relationshipLabel>
        <relationshipName>Participant_Enrollments_Pre_Screener</relationshipName>
    <type>Lookup</type>
</CustomField>