force-app/main/default/objects/Participant_Enrollment__c/fields/Pre_Screener_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screener_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre Screener Completed Date</label>
    <type>DateTime</type>
</CustomField>