force-app/main/default/objects/Participant_Enrollment__c/fields/Pre_Screener_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Pre_Screener_Survey_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre Screener Survey Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>