force-app/main/default/objects/Participant_Enrollment__c/fields/Primary_Delegate_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delegate_Email__c</fullName>
    <label>Primary Delegate Email</label>
    <type>Email</type>
</CustomField>