force-app/main/default/objects/Participant_Enrollment__c/fields/Primary_Delegate_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delegate_First_Name__c</fullName>
    <label>Primary Delegate First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>