force-app/main/default/objects/Participant_Enrollment__c/fields/Primary_Delegate_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delegate_Last_Name__c</fullName>
    <label>Primary Delegate Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>