force-app/main/default/objects/Participant_Enrollment__c/fields/Primary_Delegate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delegate_Phone_Number__c</fullName>
    <label>Primary Delegate Phone Number</label>
    <type>Phone</type>
</CustomField>