force-app/main/default/objects/Participant_Enrollment__c/fields/Primary_Delegate_s_Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delegate_s_Alt_Phone__c</fullName>
    <label>Primary Delegate’s Alt. Phone</label>
    <type>Phone</type>
</CustomField>