force-app/main/default/objects/Participant_Enrollment__c/fields/Primary_Delegate_YOB__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delegate_YOB__c</fullName>
    <label>Primary Delegate YOB</label>
    <length>4</length>
    <type>Text</type>
</CustomField>