force-app/main/default/objects/Participant_Enrollment__c/fields/Randomized__c.field-meta.xml
<CustomField>
    <fullName>Randomized__c</fullName>
    <label>Randomized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>